--- a/components/input/input.scss
+++ b/components/input/input.scss
@@ -1,11 +1,11 @@
 .inputContainer {
     width: 70%;
-    margin: 0 auto;
+    margin: 10px auto;
     padding-left: 16px;
     display: flex;
     justify-content: flex-start;
     .input {
-        width: 300px;
+        width: 333px;
         height: 17px;
         border-radius: 5px;
         border: none;
@@ -23,7 +23,7 @@
         outline: none;
         &:hover{
             cursor: pointer;
-            background: rgb(86, 78, 104);
+            background: rgb(81, 67, 122);
             color: #fff;
         }
     }
